--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World Page</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="favicon.ico" sizes="32x32">
   </head>
   <body>
     <h1>Hello World!!!</h1>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
