--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <h1>Hello World!!!</h1>
-    <script src="/js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
