--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <link href="css/style.css?v0.11" rel="stylesheet">
 
   <!-- Halloween-->
-  <link href="css/halloween.css?v0.11" rel="stylesheet">
+  <link href="css/halloween2.css?v0.11" rel="stylesheet">
 
   <script src="edweek-space-copy-email.js"></script>
   <script src="script.js" defer></script>
