--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
   <!-- Load ext. CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="css/style.css?v0.11" rel="stylesheet">
+  <link href="css/style.css?v0.12" rel="stylesheet">
 
   <!-- Halloween-->
-  <link href="css/halloween2.css?v0.11" rel="stylesheet">
+  <link href="css/halloween.css?v0.12" rel="stylesheet">
 
   <script src="edweek-space-copy-email.js"></script>
   <script src="script.js" defer></script>
