--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
           </div>
         </a>
       </div>
-      <div class="col-md-4 card-wrapper" data-cat="Human Resources & Payroll|IT & Helpdesk" data-tags="new change departing user forms onboarding offboarding access">
-        <a href="https://recruitingbypaycor.com/career/CareerHome.action?clientId=8a7883c691e3132e01921f902a632cb4" class="card card-link text-decoration-none h-100">
+      <div class="col-md-4 card-wrapper" data-cat="Human Resources & Payroll" data-tags="jobs openings hires">
+		  <a href="https://recruitingbypaycor.com/career/CareerHome.action?clientId=8a7883c691e3132e01921f902a632cb4" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
             <div class="link-icon"><i class="bi bi-person-badge"></i></div>
             <div><h5>Current Job Openings</h5><p class="text-secondary mb-0">Open Positions at Education Week<br><em class="managed-by">Managed by HR</em></p></div>
