--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<meta name="referrer" content="no-referrer">
   <!-- Additional directives in robots.txt and .htaccess for server-level enforcement-->
   <!-- Favicons & App Icons - needs additional work-->
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   <link rel="icon" href="assets/edw-sq-logo.png" type="image/png">
   <link rel="icon" sizes="32x32" href="assets/edw-sq-logo-32.png" type="image/png">
   <link rel="icon" sizes="192x192" href="assets/edw-sq-logo-192.png" type="image/png">
@@ -782,7 +782,7 @@
             <div>
               <!-- ><strong>Official address:</strong> https://edweek.space — verify this address in your browser’s location bar to ensure you're on the official site and to confirm authenticity.
                <br> -->
- 			    <strong>Access Note:</strong> If you don’t have access to a specific system or tool, please reach out to the department listed under <strong>“Managed by ...”</strong>. If you're unclear, email <a href="mailto:dxo@educationweek.org">DXO</a>.
+ 			    <strong>Access Note:</strong> If you don’t have access to a specific system or tool, please reach out to the department listed under <strong>“Managed by ...”</strong>. If you're unclear, email <a href="mailto:dxo@educationweek.org">DXO</a> for assistance.
                 <br>
  			    <strong>Official URL: Please double-check the address</strong> in your browser bar to ensure you’re on the correct site, as imitation sites could contain malware. Only access it via this verified link:  <strong>https://edweek.space</strong>.
                 <br>
