--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       ░██████████   █████ █████ ░░░███████░  
       ░░░░░░░░░░   ░░░░░ ░░░░░    ░░░░░░░    
                                        
-	Version 1.01 / Build 202510
-	Last updated: October 29, 2025
+	Version 1.1 / Build 202510
+	Last updated: November 3, 2025
 
   ==============================================================
    This site (edweek.space) is for internal use only.
@@ -51,7 +51,7 @@
 	<meta name="referrer" content="no-referrer">
   <!-- Additional directives in robots.txt and .htaccess for server-level enforcement-->
   <!-- Favicons & App Icons - needs additional work-->
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <link rel="icon" type="image/png" href="img/favicon.png">
   <link rel="icon" href="assets/edw-sq-logo.png" type="image/png">
   <link rel="icon" sizes="32x32" href="assets/edw-sq-logo-32.png" type="image/png">
   <link rel="icon" sizes="192x192" href="assets/edw-sq-logo-192.png" type="image/png">
@@ -66,7 +66,7 @@
   <link href="css/style.css?v0.13" rel="stylesheet">
 
   <!-- Holiday Logo Treatments -->
-  <link href="css/halloween.css?v0.13" rel="stylesheet">
+  <!-- <link href="css/halloween.css?v0.13" rel="stylesheet"> -->
   <!-- <link href="css/christmas.css?v" rel="stylesheet"> -->
 
   <!-- Supplementary JS -->
@@ -782,7 +782,7 @@
             <div>
               <!-- ><strong>Official address:</strong> https://edweek.space — verify this address in your browser’s location bar to ensure you're on the official site and to confirm authenticity.
                <br> -->
- 			    <strong>Access Note:</strong> If you don’t have access to a specific system or tool, please reach out to the department listed under <strong>“Managed by ...”</strong>. If you're unclear, email <a href="mailto:dxo@educationweek.org">DXO</a> for assistance.
+ 			    <strong>Access Note:</strong> If you don’t have access to a specific system or tool, please reach out to the department listed under <strong>“Managed by ...”</strong>. If you're unclear, email <a href="mailto:dxo@educationweek.org">DXO</a>.
                 <br>
  			    <strong>Official URL: Please double-check the address</strong> in your browser bar to ensure you’re on the correct site, as imitation sites could contain malware. Only access it via this verified link:  <strong>https://edweek.space</strong>.
                 <br>
@@ -792,7 +792,7 @@
         </div>        
 		<div class="col-md-4 small text-secondary d-flex flex-column justify-content-center">
 		  <div>URL: <strong>https://edweek.space</strong> (verify link in address bar)</div>
-		  <div>Version 1.01 / Build 202510</div>
+		  <div>Version 1.1 / Build 202510</div>
 		  <div>Environment: Production</div>
 		  <div>Last updated: <span id="lastUpdated" class="ms-1"></span></div>
 		  <div>System Status: <a href="http://status.epe.org/">[View uptime and incidents →]</a></div>
@@ -814,6 +814,8 @@
     Built with care and purpose by 
     <span class="dxo-link"><a href="https://www.edweek.org/about/our-people#dxo" class="dxo-link no-link-style">DXO — Digital eXperience &amp; Operations</a></span>
   </div>
+	 <a href='https://www.free-counters.org/'>Free-Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=04a21cd8c47405b3e379c0c08d3f039605b4442c'></script>
+		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1429887/t/4"></script>
 </footer>
 
 
@@ -946,6 +948,7 @@
 	  })();
 	</script>
 
+<!--
 	<script>
 	// Holiday Animation 
 	(function () {
@@ -989,6 +992,7 @@
 	  }
 	})();
 	</script>
+	-->
 	
 </body>
 </html>
