--- a/index.html
+++ b/index.html
@@ -816,7 +816,14 @@
   </div>
 	 <a href='https://www.free-counters.org/'>Free-Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=04a21cd8c47405b3e379c0c08d3f039605b4442c'></script>
 		<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1429887/t/4"></script>
+
+ <a href='http://www.freevisitorcounters.com'>more on freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=dd1303fd0d488b294b08d2895f72626d96f55ef9'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1430625/t/4"></script>
+
+
 </footer>
+
+
 
 
 <!-- Supporting JS chain -->
