--- a/stage.html
+++ b/stage.html
@@ -813,10 +813,11 @@
     Built with care and purpose by 
     <span class="dxo-link"><a href="https://www.edweek.org/about/our-people#dxo" class="dxo-link no-link-style">DXO — Digital eXperience &amp; Operations</a></span>
   </div>
-  <a href='http://www.freevisitorcounters.com'>more on freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=dd1303fd0d488b294b08d2895f72626d96f55ef9'></script>
-  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1429882/t/4"></script>
+  <div class="powr-hit-counter" id="64e127f7_1762789377"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
 </footer>
 
+
+	
 <!-- Supporting JS chain -->
   <script>
   // Copyright Year
