--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       ░██████████   █████ █████ ░░░███████░  
       ░░░░░░░░░░   ░░░░░ ░░░░░    ░░░░░░░    
                                        
-	Version 1.1 / Build 202510
-	Last updated: November 4, 2025
+	Version 1.3 / Build 202511
+	Last updated: November 11, 2025
 
   ==============================================================
    This site (edweek.space) is for internal use only.
@@ -451,6 +451,7 @@
           </div>
         </a>
       </div>
+      <!--
       <div class="col-md-4 card-wrapper" data-cat="Human Resources & Payroll" data-tags="department org charge people directory">
         <a href="https://hcm.paycor.com/documents/#/client/178833/employee/18250623305064/documents" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
@@ -459,6 +460,7 @@
           </div>
         </a>
       </div>
+      -->
       <div class="col-md-4 card-wrapper" data-cat="Human Resources & Payroll" data-tags="department org charge people directory">
         <a href="https://secure.paycor.com/Perform/Employee/OrgChart#list" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
@@ -624,7 +626,17 @@
           </div>
         </a>
       </div>
-      
+      <div class="col-md-4 card-wrapper" data-cat="Sales & CRM" data-tags="yesware crm email sales email">
+        <a href="https://www.yesware.com/user/sign-in" class="card card-link text-decoration-none h-100" target="_blank" rel="noopener">
+          <div class="card-body d-flex gap-3 align-items-start">
+            <div class="link-icon position-relative">
+              <i class="bi bi-envelope-check"></i>
+            </div>
+            <div><h5>Yesware</h5><p class="text-secondary mb-0">CRM email tracking<br><em class="managed-by">Managed by IT</em></p></div>
+          </div>
+        </a>
+      </div>
+
       <!-- ############ Security -->
       <div class="col-md-4 card-wrapper" data-cat="Security" data-tags="keeper password passwords login sigin nmanager security vault">
         <a href="https://keepersecurity.com/vault/" class="card card-link text-decoration-none h-100" target="_blank" rel="noopener">
@@ -792,7 +804,7 @@
         </div>        
 		<div class="col-md-4 small text-secondary d-flex flex-column justify-content-center">
 		  <div>URL: <strong>https://edweek.space</strong> (verify link in address bar)</div>
-		  <div>Version 1.2 / Build 202510</div>
+		  <div>Version 1.3 / Build 202511</div>
 		  <div>Environment: Production</div>
 		  <div>Last updated: <span id="lastUpdated" class="ms-1"></span></div>
 		  <div>System Status: <a href="http://status.epe.org/">[View uptime and incidents →]</a></div>
@@ -813,11 +825,27 @@
     Built with care and purpose by 
     <span class="dxo-link"><a href="https://www.edweek.org/about/our-people#dxo" class="dxo-link no-link-style">DXO — Digital eXperience &amp; Operations</a></span>
   </div>
-  <a href='http://www.freevisitorcounters.com'>more on freevisitorcounters.com</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=dd1303fd0d488b294b08d2895f72626d96f55ef9'></script>
-  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1429882/t/4"></script>
 </footer>
 
 <!-- Supporting JS chain -->
+
+	<!-- Default Statcounter code for EdWeek Space
+	https://www.edweek.space -->
+	<script type="text/javascript">
+	var sc_project=13182680; 
+	var sc_invisible=1; 
+	var sc_security="de6391ee"; 
+	var sc_remove_link=1; 
+	</script>
+	<script type="text/javascript"
+	src="https://www.statcounter.com/counter/counter.js"
+	async></script>
+	<noscript><div class="statcounter"><img class="statcounter"
+	src="https://c.statcounter.com/13182680/0/de6391ee/1/"
+	alt="Web Analytics"
+	referrerPolicy="no-referrer-when-downgrade"></div></noscript>
+	<!-- End of Statcounter Code -->
+
   <script>
   // Copyright Year
     document.getElementById('year').textContent = new Date().getFullYear();
