--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- <link href="css/christmas.css?v" rel="stylesheet"> -->
 
   <!-- Supplementary JS -->
-  <script src="assets/holiday-logo-script.js" defer></script>
+  <script src="assets/holiday-logo.js" defer></script>
 
 </head>
 <body>
