--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       ░██████████   █████ █████ ░░░███████░  
       ░░░░░░░░░░   ░░░░░ ░░░░░    ░░░░░░░    
                                        
-	Version 1.4 / Build 202511
-	Last updated: November 17, 2025
+	Version 1.5 / Build 202511
+	Last updated: December 1, 2025
 
   ==============================================================
    This site (edweek.space) is for internal use only.
@@ -67,7 +67,7 @@
 
   <!-- Holiday Logo Treatments -->
   <!-- <link href="css/halloween.css?v0.13" rel="stylesheet"> -->
-  <link href="css/thanksgiving.css" rel="stylesheet"> 
+  <!-- <link href="css/thanksgiving.css" rel="stylesheet"> -->
   <!-- <link href="css/christmas.css?v" rel="stylesheet"> -->
 
   <!-- Supplementary JS -->
@@ -824,9 +824,9 @@
         </div>        
 		<div class="col-md-4 small text-secondary d-flex flex-column justify-content-center">
 		  <div>URL: <strong>https://edweek.space</strong> (verify link in address bar)</div>
-		  <div>Version 1.4 / Build 202511</div>
+		  <div>Version 1.5 / Build 202511</div>
 		  <div>Environment: Production</div>
-		  <div>Last updated: <span id="lastUpdated" class="ms-1"></span></div>
+		  <div>Last Online: <span id="lastUpdated" class="ms-1"></span></div>
 		  <div>System Status: <a href="http://status.epe.org/">[View uptimes & incidents →]</a></div>
 		  <div>Your IP: <span id="userIp"></span></div>		
 		  <small class="text-muted">(IP shown for diagnostic purposes only)</small>
@@ -1019,7 +1019,7 @@
 		b.setAttribute('aria-hidden', 'true');
 		//b.textContent = '^v^';  // for Halloween
 		//b.textContent = '🔔';  // for Christmas
-		b.textContent = '🍁';  // for Thanksgiving
+		//b.textContent = '🍁';  // for Thanksgiving
 		
 		const dx = 40 + Math.random() * 30;   // make horizontal drift stronger
 		const dy = -40 - Math.random() * 50;  // make upward drift a bit shallower
