--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       ░██████████   █████ █████ ░░░███████░  
       ░░░░░░░░░░   ░░░░░ ░░░░░    ░░░░░░░    
                                        
-	Version 1.5 / Build 202511
+	Version 1.6 / Build 202511
 	Last updated: December 1, 2025
 
   ==============================================================
@@ -68,7 +68,7 @@
   <!-- Holiday Logo Treatments -->
   <!-- <link href="css/halloween.css?v0.13" rel="stylesheet"> -->
   <!-- <link href="css/thanksgiving.css" rel="stylesheet"> -->
-  <!-- <link href="css/christmas.css?v" rel="stylesheet"> -->
+  <link href="css/christmas.css?v" rel="stylesheet">
 
   <!-- Supplementary JS -->
   <script src="assets/holiday-logo.js" defer></script>
@@ -104,20 +104,18 @@
 <div class="ticker-bar" role="region" aria-label="Announcements">
   <div class="ticker-track">
 
-    <span class="ticker-item">🎄 &nbsp;Trim The Tree & Menorah Lighting Social - December 3rd at 3:30 PM</span>
     <span class="ticker-item">🏛️ &nbsp;EdWeek Homecoming - December 9th–10th</span>
     <span class="ticker-item">🍪 &nbsp;Annual Cookie Contest - December 10th at 1:30 PM</span>
     <span class="ticker-item">⛄ &nbsp;Holiday Party - December 10th at 6:00 PM</span>
     <span class="ticker-item">👚 &nbsp;Ugly Holiday Sweater Contest -  December 10th at 1:30 PM</span>
-    <!-- <span class="ticker-item">🌐 &nbsp;Bookmark www.edweek.space for quick access!</span> -->
+	<span class="ticker-item">🌐 &nbsp;Bookmark www.edweek.space for quick access!</span>
 
     <!-- Duplicated for smoother continuous loop -->
-    <span class="ticker-item">🎄 &nbsp;Trim The Tree & Menorah Lighting Social - December 3rd at 3:30 PM</span>
     <span class="ticker-item">🏛️ &nbsp;EdWeek Homecoming - December 9th–10th</span>
     <span class="ticker-item">🍪 &nbsp;Annual Cookie Contest - December 10th at 1:30 PM</span>
     <span class="ticker-item">⛄ &nbsp;Holiday Party - December 10th at 6:00 PM</span>
     <span class="ticker-item">👚 &nbsp;Ugly Holiday Sweater Contest -  December 10th at 1:30 PM</span>
-    <!-- <span class="ticker-item">🌐 &nbsp;Bookmark www.edweek.space for quick access!</span> -->
+    <span class="ticker-item">🌐 &nbsp;Bookmark www.edweek.space for quick access!</span>
 
   </div>
 </div>
@@ -500,7 +498,7 @@
       </div>
 
       <!-- ####### IT & Helpdesk -->
-      <div class="col-md-4 card-wrapper" data-cat="IT & Helpdesk" data-tags="helpdesk service desk ticket support it portal">
+      <div class="col-md-4 card-wrapper" data-cat="IT & Helpdesk" data-tags="helpdesk jira system service desk ticket support it portal">
         <a href="https://edweek.atlassian.net/servicedesk/customer/portal/7" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
             <div class="link-icon"><i class="bi bi-life-preserver"></i></div>
@@ -824,7 +822,7 @@
         </div>        
 		<div class="col-md-4 small text-secondary d-flex flex-column justify-content-center">
 		  <div>URL: <strong>https://edweek.space</strong> (verify link in address bar)</div>
-		  <div>Version 1.5 / Build 202511</div>
+		  <div>Version 1.6 / Build 202511</div>
 		  <div>Environment: Production</div>
 		  <div>Last Online: <span id="lastUpdated" class="ms-1"></span></div>
 		  <div>System Status: <a href="http://status.epe.org/">[View uptimes & incidents →]</a></div>
@@ -849,8 +847,7 @@
 
 <!-- Supporting JS chain -->
 
-	<!-- Default Statcounter code for EdWeek Space
-	https://www.edweek.space -->
+	<!-- Default Statcounter code for EdWeek Space - https://www.edweek.space -->
 	<script type="text/javascript">
 	var sc_project=13182680; 
 	var sc_invisible=1; 
@@ -1018,8 +1015,8 @@
 		b.className = 'bat';
 		b.setAttribute('aria-hidden', 'true');
 		//b.textContent = '^v^';  // for Halloween
-		//b.textContent = '🔔';  // for Christmas
 		//b.textContent = '🍁';  // for Thanksgiving
+		b.textContent = '🔔';  // for Christmas
 		
 		const dx = 40 + Math.random() * 30;   // make horizontal drift stronger
 		const dy = -40 - Math.random() * 50;  // make upward drift a bit shallower
