--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       ░██████████   █████ █████ ░░░███████░  
       ░░░░░░░░░░   ░░░░░ ░░░░░    ░░░░░░░    
                                        
-	Version 1.7 / Build 202511
-	Last updated: December 11, 2025
+	Version 1.8 / Build 202511
+	Last updated: January 2, 2026
 
   ==============================================================
    This site (edweek.space) is for internal use only.
@@ -63,15 +63,15 @@
   <!-- Load ext. CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="css/style.css?v0.13" rel="stylesheet">
+  <link href="css/style.css?v0.14" rel="stylesheet">
 
   <!-- Holiday Logo Treatments -->
-  <!-- <link href="css/halloween.css?v0.13" rel="stylesheet"> -->
+  <!-- <link href="css/halloween.css" rel="stylesheet"> -->
   <!-- <link href="css/thanksgiving.css" rel="stylesheet"> -->
-  <link href="css/christmas.css?v" rel="stylesheet">
+  <!-- <link href="css/christmas.css" rel="stylesheet"> -->
 
   <!-- Supplementary JS -->
-  <script src="assets/holiday-logo.js" defer></script>
+  <!-- <script src="assets/holiday-logo.js" defer></script> -->
 
 </head>
 <body>
@@ -104,15 +104,17 @@
 <div class="ticker-bar" role="region" aria-label="Announcements">
   <div class="ticker-track">
 
-    <span class="ticker-item">🍪 &nbsp;Annual Cookie Contest — Winners: Daniela and Robyn</span>
-    <span class="ticker-item">👚 &nbsp;Ugly Holiday Sweater Contest — Winner: Caitlynn | Runner-Up: Jonathan</span>
-    <span class="ticker-item">⛄ &nbsp;Week of December 29 – Work From Home Week</span>
+    <span class="ticker-item">🎉 &nbsp;Happy New Year! Welcome to 2026 🎊</span>
     <span class="ticker-item">🌐 &nbsp;Bookmark www.edweek.space for quick access!</span>
 
     <!-- Duplicated for smoother continuous loop -->
-    <span class="ticker-item">🍪 &nbsp;Annual Cookie Contest — Winners: Daniela and Robyn</span>
-    <span class="ticker-item">👚 &nbsp;Ugly Holiday Sweater Contest — Winner: Caitlynn | Runner-Up: Jonathan</span>
-    <span class="ticker-item">⛄ &nbsp;Week of December 29 – Work From Home Week</span>
+
+    <span class="ticker-item">🎉 &nbsp;Happy New Year! Welcome to 2026 🎊</span>
+    <span class="ticker-item">🌐 &nbsp;Bookmark www.edweek.space for quick access!</span>
+
+    <!-- Duplicated for smoother continuous loop -->
+
+    <span class="ticker-item">🎉 &nbsp;Happy New Year! Welcome to 2026 🎊</span>
     <span class="ticker-item">🌐 &nbsp;Bookmark www.edweek.space for quick access!</span>
 
   </div>
@@ -820,7 +822,7 @@
         </div>        
 		<div class="col-md-4 small text-secondary d-flex flex-column justify-content-center">
 		  <div>URL: <strong>https://edweek.space</strong> (verify link in address bar)</div>
-		  <div>Version 1.7 / Build 202511</div>
+		  <div>Version 1.8 / Build 202511</div>
 		  <div>Environment: Production</div>
 		  <div>Last Online: <span id="lastUpdated" class="ms-1"></span></div>
 		  <div>System Status: <a href="http://status.epe.org/">[View uptimes & incidents →]</a></div>
