--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       ░██████████   █████ █████ ░░░███████░  
       ░░░░░░░░░░   ░░░░░ ░░░░░    ░░░░░░░    
                                        
-	Version 1.8 / Build 202511
-	Last updated: January 2, 2026
+	Version 1.8.2 / Build 202511
+	Last updated: January 9, 2026
 
   ==============================================================
    This site (edweek.space) is for internal use only.
@@ -242,6 +242,14 @@
           <div class="card-body d-flex gap-3 align-items-start">
             <div class="link-icon"><i class="bi bi-list"></i></div>
             <div><h5>List of CMS Guides</h5><p class="text-secondary mb-0">Over 20 guides covering various CMS features<br><em class="managed-by">Managed by DigNews</em></p></div>
+          </div>
+        </a>
+      </div>
+       <div class="col-md-4 card-wrapper" data-cat="How-To Guides" data-tags="howto tag section taxonomy guide manual">
+        <a href="https://edweek.atlassian.net/wiki/spaces/lib/pages/1114963969/Taxonomy+Sections+and+Tags" class="card card-link text-decoration-none h-100" target="_blank" rel="noopener">
+          <div class="card-body d-flex gap-3 align-items-start">
+            <div class="link-icon"><i class="bi bi-tags"></i></div>
+            <div><h5>Taxonomy (Sections and Tags)</h5><p class="text-secondary mb-0"><em class="managed-by">Managed by Library</em></p></div>
           </div>
         </a>
       </div>
@@ -675,6 +683,22 @@
       </div>
 
       <!-- ############# Trackers and Requests Management -->
+      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="ad production tracker">
+        <a href="https://app.smartsheet.com/dashboards/J4XQfr4xMQXCWRjJR9F2cFv8GcV8r8m9623qvWQ1" class="card card-link text-decoration-none h-100">
+          <div class="card-body d-flex gap-3 align-items-start">
+            <div class="link-icon"><i class="bi bi-badge-ad"></i></div>
+            <div><h5>Ad Production Tracker</h5><p class="text-secondary mb-0">Through Smartsheet<br><em class="managed-by">Managed by AdOps</em></p></div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="art kanban board tracker">
+        <a href="https://edweek.atlassian.net/jira/people/557058:6a0d353d-b2ae-4d8d-9da7-085a97728143/boards/3" class="card card-link text-decoration-none h-100">
+          <div class="card-body d-flex gap-3 align-items-start">
+            <div class="link-icon"><i class="bi bi-brush"></i></div>
+            <div><h5>Art Kanban board</h5><p class="text-secondary mb-0">Through Jira<br><em class="managed-by">Managed by IT</em></p></div>
+          </div>
+        </a>
+      </div>
       <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="editorial content kanban board tracker">
         <a href="https://edweek.atlassian.net/jira/people/5dd591459fa2b00fbaa73dc1/boards/42?quickFilter=480" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
@@ -691,19 +715,11 @@
           </div>
         </a>
       </div>
-       <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="print production schedule">
-        <a href="https://editproj.sharepoint.com/:x:/s/EdWeekEditorial/Ea_D2Cbnz4FGiq_WtuwgI7UBJlX-3zAAKCDYleWWQ_exZg?e=HWjKOW" class="card card-link text-decoration-none h-100" target="_blank" rel="noopener">
+      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="email promotions tracker">
+        <a href="https://edweek.atlassian.net/jira/servicedesk/projects/EP" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
-            <div class="link-icon"><i class="bi bi-calendar-event"></i></div>
-            <div><h5>Print Production Calendar</h5><p class="text-secondary mb-0"><em class="managed-by">Managed by Art</em></p></div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="art kanban board tracker">
-        <a href="https://edweek.atlassian.net/jira/people/557058:6a0d353d-b2ae-4d8d-9da7-085a97728143/boards/3" class="card card-link text-decoration-none h-100">
-          <div class="card-body d-flex gap-3 align-items-start">
-            <div class="link-icon"><i class="bi bi-brush"></i></div>
-            <div><h5>Art Kanban board</h5><p class="text-secondary mb-0">Through Jira<br><em class="managed-by">Managed by IT</em></p></div>
+            <div class="link-icon"><i class="bi bi-envelope-open"></i></div>
+            <div><h5>Email Promotions Tracker</h5><p class="text-secondary mb-0">Through Jira<br><em class="managed-by">Managed by IT</em></p></div>
           </div>
         </a>
       </div>
@@ -715,27 +731,27 @@
           </div>
         </a>
       </div>
-      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="source diversity tracker">
+       <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="print production schedule">
+        <a href="https://editproj.sharepoint.com/:x:/s/EdWeekEditorial/Ea_D2Cbnz4FGiq_WtuwgI7UBJlX-3zAAKCDYleWWQ_exZg?e=HWjKOW" class="card card-link text-decoration-none h-100" target="_blank" rel="noopener">
+          <div class="card-body d-flex gap-3 align-items-start">
+            <div class="link-icon"><i class="bi bi-calendar-event"></i></div>
+            <div><h5>Print Production Calendar</h5><p class="text-secondary mb-0"><em class="managed-by">Managed by Art</em></p></div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="sources sourcing experts tracker source data source diversity">
+        <a href="https://edweek.atlassian.net/wiki/spaces/lib/pages/1114112006/Demographics+Tracker+Source+Tracker" class="card card-link text-decoration-none h-100">
+          <div class="card-body d-flex gap-3 align-items-start">
+            <div class="link-icon"><i class="bi bi-people-fill"></i></div>
+            <div><h5>Demographics Tracker (Source Tracker)</h5><p class="text-secondary mb-0">Through Confluence<br><em class="managed-by">Managed by Library</em></p></div>
+          </div>
+        </a>
+      </div>
+      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="source data diversity tracker">
         <a href="https://edweek.atlassian.net/jira/servicedesk/projects/SOURCE/queues/custom/230" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
             <div class="link-icon"><i class="bi bi-list-task me-2"></i></div>
             <div><h5>Source Diversity Tracker</h5><p class="text-secondary mb-0">Through Jira<br><em class="managed-by">Managed by Library</em></p></div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="email promotions tracker">
-        <a href="https://edweek.atlassian.net/jira/servicedesk/projects/EP" class="card card-link text-decoration-none h-100">
-          <div class="card-body d-flex gap-3 align-items-start">
-            <div class="link-icon"><i class="bi bi-envelope-open"></i></div>
-            <div><h5>Email Promotions Tracker</h5><p class="text-secondary mb-0">Through Jira<br><em class="managed-by">Managed by IT</em></p></div>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="gos group online subscriptions">
-        <a href="https://edweek.atlassian.net/browse/GOS" class="card card-link text-decoration-none h-100">
-          <div class="card-body d-flex gap-3 align-items-start">
-            <div class="link-icon"><i class="bi bi-people"></i></div>
-            <div><h5>Group Online Subscriptions (GOS) Tracker</h5><p class="text-secondary mb-0">Through Jira<br><em class="managed-by">Managed by IT</em></p></div>
           </div>
         </a>
       </div>
@@ -747,11 +763,11 @@
           </div>
         </a>
       </div>
-      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="ad production tracker">
-        <a href="https://app.smartsheet.com/dashboards/J4XQfr4xMQXCWRjJR9F2cFv8GcV8r8m9623qvWQ1" class="card card-link text-decoration-none h-100">
+      <div class="col-md-4 card-wrapper" data-cat="Trackers & Requests Management" data-tags="gos group online subscriptions">
+        <a href="https://edweek.atlassian.net/browse/GOS" class="card card-link text-decoration-none h-100">
           <div class="card-body d-flex gap-3 align-items-start">
-            <div class="link-icon"><i class="bi bi-badge-ad"></i></div>
-            <div><h5>Ad Production Tracker</h5><p class="text-secondary mb-0">Through Smartsheet<br><em class="managed-by">Managed by AdOps</em></p></div>
+            <div class="link-icon"><i class="bi bi-people"></i></div>
+            <div><h5>Group Online Subscriptions (GOS) Tracker</h5><p class="text-secondary mb-0">Through Jira<br><em class="managed-by">Managed by IT</em></p></div>
           </div>
         </a>
       </div>
@@ -822,7 +838,7 @@
         </div>        
 		<div class="col-md-4 small text-secondary d-flex flex-column justify-content-center">
 		  <div>URL: <strong>https://edweek.space</strong> (verify link in address bar)</div>
-		  <div>Version 1.8 / Build 202511</div>
+		  <div>Version 1.8.2 / Build 202511</div>
 		  <div>Environment: Production</div>
 		  <div>Last Online: <span id="lastUpdated" class="ms-1"></span></div>
 		  <div>System Status: <a href="http://status.epe.org/">[View uptimes & incidents →]</a></div>
